[MODORDSTOR-356] - Completed the forgotten places to populate statusUpdatedDate